Code smell fix: Replacing ImmutableList from List