@@ -19,7 +19,6 @@
  */
 package org.sonar.server.permission;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import javax.annotation.concurrent.Immutable;
 import org.sonar.api.resources.Qualifiers;
@@ -31,21 +30,26 @@ import static java.util.stream.Collectors.toList;
 
 @Immutable
 public class PermissionServiceImpl implements PermissionService {
+  private static final List<String> ALL_PROJECT_PERMISSIONS = List.of(
+    UserRole.ADMIN,
+    UserRole.CODEVIEWER,
+    UserRole.ISSUE_ADMIN,
+    UserRole.SECURITYHOTSPOT_ADMIN,
+    UserRole.SCAN,
+    UserRole.USER
+  );
 
-  private static final List<String> ALL_PROJECT_PERMISSIONS = ImmutableList.of(
-    UserRole.ADMIN, UserRole.CODEVIEWER, UserRole.ISSUE_ADMIN, UserRole.SECURITYHOTSPOT_ADMIN, UserRole.SCAN, UserRole.USER);
-
-  private static final List<GlobalPermission> ALL_GLOBAL_PERMISSIONS = ImmutableList.copyOf(GlobalPermission.values());
+  private static final List<GlobalPermission> ALL_GLOBAL_PERMISSIONS = List.of(GlobalPermission.values());
 
   private final List<GlobalPermission> globalPermissions;
   private final List<String> projectPermissions;
 
   public PermissionServiceImpl(ResourceTypes resourceTypes) {
-    globalPermissions = ImmutableList.copyOf(ALL_GLOBAL_PERMISSIONS.stream()
+    globalPermissions = List.copyOf(ALL_GLOBAL_PERMISSIONS.stream()
       .filter(s -> !s.equals(GlobalPermission.APPLICATION_CREATOR) || resourceTypes.isQualifierPresent(Qualifiers.APP))
       .filter(s -> !s.equals(GlobalPermission.PORTFOLIO_CREATOR) || resourceTypes.isQualifierPresent(Qualifiers.VIEW))
       .collect(toList()));
-    projectPermissions = ImmutableList.copyOf(ALL_PROJECT_PERMISSIONS.stream()
+    projectPermissions = List.copyOf(ALL_PROJECT_PERMISSIONS.stream()
       .filter(s -> !s.equals(GlobalPermission.APPLICATION_CREATOR.getKey()) || resourceTypes.isQualifierPresent(Qualifiers.APP))
       .filter(s -> !s.equals(GlobalPermission.PORTFOLIO_CREATOR.getKey()) || resourceTypes.isQualifierPresent(Qualifiers.VIEW))
       .collect(toList()));
